@@ -36,8 +36,8 @@
 static char s_alsa_driver[] = "ALSA";
 
 static void *alsa_handle = NULL;
-//static const char alsa_default[] = "hw:0,0";
-//static const char alsa_default[] = "plughw:0";
+/*static const char alsa_default[] = "hw:0,0";*/
+/*static const char alsa_default[] = "plughw:0";*/
 static const char alsa_default[] = "default";
 static const char *pcmname = alsa_default;
 static snd_pcm_t *pcm = NULL;
@@ -172,7 +172,7 @@ static qboolean S_ALSA_Init (dma_t *dma)
 				if (rate != (unsigned int) tryrates[i])
 				{
 					Con_Printf ("Warning: Rate set (%u) didn't match requested rate (%d)!\n", rate, tryrates[i]);
-				//	goto error;
+				/*	goto error;*/
 				}
 				break;
 			}
@@ -188,7 +188,7 @@ static qboolean S_ALSA_Init (dma_t *dma)
 		if (rate != (unsigned int)desired_speed)
 		{
 			Con_Printf ("Warning: Rate set (%u) didn't match requested rate (%d)!\n", rate, desired_speed);
-		//	goto error;
+		/*	goto error;*/
 		}
 	}
 
